welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:22: error: not found: value droit
	droit()
        ^